# avocados-and-recipes

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .python-version  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  risotto_gorgonzola_pears_and_walnuts.json
api_examples/: post_risotto_gorgonzola_pears_and_walnuts.json  put_risotto_gorgonzola_pears_and_walnuts.json
containers/: Dockerfile
docs/: LINKS.md
notebooks/: 1-eda-model.ipynb
scripts/: clean_string.py  q_create_tables.sql
src/: __version__.py
src/api/: app.py  database.py
src/api/models/: __init__.py  associations.py  ingredient.py  recipe.py  schemas.py  uom.py
src/api/templates/: index.html
src/base/: model.py  preprocessing.py  utils.py
src/queries/: q_create_tables.sql
