[tool.poetry]
name = "avocados-technical-task"
version = "0.1.0"
description = "Technical task about building a simple ML model in Numpy and a Flask API around it."
authors = ["Roberto Fierimonte <roberto.fierimonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.17.0"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
