[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/__version__.py"
]

[tool.poetry]
name = "avocados-technical-task"
version = "1.0.0"
description = "Technical task about building a simple ML model in Numpy and a Flask Rest API for CRUD operations."
authors = ["Roberto Fierimonte <roberto.fierimonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
flask = "^2.2.2"
loguru = "^0.6.0"
joblib = "^1.2.0"
flask-sqlalchemy = "^3.0.2"
marshmallow = "^3.19.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.1"
pymysql = "^1.0.2"
cryptography = "^38.0.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.17.0"
pandas = "^1.5.1"
numba = "^0.56.4"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
